--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 /* header */
 header {
     background-color: white;
-    height: 4.8rem;
+    /* height: 4.8rem; */
     position: sticky;
     top: 0;
     z-index: 1001 !important;
@@ -23,7 +23,6 @@ header {
 .navbar {
     padding-top: 0.295rem;
 }
-
 header .search_container {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -115,6 +114,9 @@ header .more:hover {
     border-radius: 0.25rem;
     cursor: pointer;
 }
+
+
+
 
 /* Slider */
 .slider {
@@ -497,3 +499,61 @@ footer {
     height: 17rem;
     border-radius: 0.5rem;
 }
+
+
+/* @media (max-width: 576px) {
+    .login_container {
+      padding: 0 16px;
+    }
+  
+    .logo_container {
+      margin-bottom: 20px;
+    }
+  
+    .content {
+      margin-top: 20px;
+    }
+  
+    .form_btn {
+      width: 100%;
+    }
+  }
+  
+  @media (min-width: 577px) and (max-width: 991px) {
+    .login_container {
+      padding: 0 24px;
+    }
+  
+    .content {
+      margin-top: 30px;
+    }
+  
+    .form_btn {
+      width: 50%;
+    }
+  } */
+
+/* register page  */
+
+
+/* Adjust form elements for smaller screens */
+@media (min-width: 576px) {
+    .register_container {
+      padding: 0 10px;
+    }
+
+    .first_name{
+        width:155px,
+    }
+  }
+  
+  /* Adjust font size for smaller screens */
+  @media (min-width: 320px) {
+    .register_container h1 {
+      font-size: 18px;
+    }
+
+    .first_name{
+        width:155px,
+    }
+  }
