completed home page and cart page

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
+/* Universal styles */
 * {
     margin: 0;
     padding: 0;
@@ -10,48 +11,60 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: #c9cdd5;
     margin: 0;
+    height: 100%;
+    min-width: 100vh;
+    /* overflow-x: clip; */
 }
 
-/* header */
 header {
     background-color: white;
     position: sticky;
     top: 0;
-    z-index: 1001 !important;
+    z-index: 1001;
     width: 100%;
-    min-width: 100vh;
+    min-width: 100vw;
     padding: 0.5rem 1rem;
 }
 
-.navbar {
+.main-navbar {
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    /* gap: 2vw; */
+    /* Relative unit */
+    width: 100%;
+    /* min-width: 100vh; */
+}
+
+.logo-and-search {
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 90%;
+    /* Relative unit */
+    max-width: 800px;
+    /* Maximum width */
 }
 
 .logo {
-    flex: 1;
-    display: flex;
-    align-items: center;
     cursor: pointer;
 }
 
 .logo img {
-    max-width: 100%;
+    max-width: 125px;
     height: auto;
+    margin-right: 1rem;
 }
 
 .search_container {
-    flex: 1;
     display: flex;
     align-items: center;
-    margin: 0 0.5rem;
+    margin-right: 1rem;
+    width: 75%;
+    /* Relative unit */
 }
 
 .search-box {
-    flex: 3;
+    flex-grow: 1;
     padding: 0.5rem;
     outline: none;
     border: none;
@@ -64,7 +77,7 @@ header {
 
 .search-btn {
     width: 3rem;
-    height: 2.2rem;
+    height: 2.5rem;
     background-color: aliceblue;
     cursor: pointer;
     border: 0px;
@@ -76,57 +89,95 @@ header {
     border-bottom-left-radius: 0.45rem;
 }
 
-
-.login,
-.cart-icon,
-.become-seller,
-.more {
-    margin: 0 0.5rem;
-    font-size: 1rem;
+.other-elements {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 16px;
+    width: 80vh;
+    /* Relative unit */
 }
 
-.login:hover,
-.cart-icon:hover,
-.become-seller:hover,
-.more:hover {
-    border-radius: 0.25rem;
+header .cart-icon {
+    transition: transform 0.3s ease;
+}
+
+header .cart-icon:hover {
     border: 0.062rem solid rgba(4, 50, 137, 0.941);
+    border-radius: 0.25rem;
     cursor: pointer;
+    transform: scale(1.1);
 }
 
 .ant-badge-count {
-    font-size: 1rem;
+    font-size: 1.25rem;
     padding: 0 0.5rem;
 }
 
-.cart-icon:hover {
+.become-seller {
+    transition: transform 0.3s ease;
+}
+
+.become-seller:hover {
     border: 0.062rem solid rgba(4, 50, 137, 0.941);
     border-radius: 0.25rem;
     cursor: pointer;
+    transform: scale(1.1);
+}
+
+header .more {
+    margin-top: px;
+    transition: transform 0.3s ease;
+}
+
+header .login {
+    transition: transform 0.3s ease;
+}
+
+.login_text {
+    text-decoration: none !important;
+}
+
+header .login:hover {
+    border: 0.062rem solid rgba(4, 50, 137, 0.941);
+    border-radius: 0.25rem;
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+header .more:hover {
+    border: 0.062rem solid rgba(4, 50, 137, 0.941);
+    border-radius: 0.25rem;
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
 
+/* Media queries */
 @media (max-width: 768px) {
-    .navbar {
+    .main-navbar {
         flex-direction: column;
-        align-items: center;
     }
 
-    .search_container {
-        flex: 3;
-        margin: 0.5rem 0;
+    .other-elements {
+        margin-top: 15px;
     }
+}
 
-    .search-box {
-        flex: 5;
+@media (min-width: 1024px) {
+    .main-navbar {
+        flex-direction: row;
     }
+}
 
-    .login,
-    .cart-icon,
-    .become-seller,
-    .more {
-        margin: 0.5rem 0;
-    }
+/* Hover effects */
+header .cart-icon:hover,
+.become-seller:hover,
+header .login:hover,
+header .more:hover {
+    border: 0.062rem solid rgba(4, 50, 137, 0.941);
+    border-radius: 0.25rem;
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
 
@@ -135,7 +186,6 @@ header {
     margin-top: 15px;
     width: 100%;
     min-width: 100vh;
-
 }
 
 .section {
@@ -160,7 +210,7 @@ header {
 
 .carousel-container {
     width: 100%;
-    min-width: 100vh;
+    /* min-width: 100vh; */
     padding-left: 70.5px;
     padding-bottom: 25px;
 }
@@ -178,8 +228,7 @@ header {
     }
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-
+@media (min-width: 768px) and (max-width: 1440px) {
     .slider {
         width: 100% !important;
         min-width: 100vh !important;
@@ -187,28 +236,11 @@ header {
     }
 
     .slider-image {
-        width: 100% !important;
         min-width: 100vh !important;
-        height: 180px !important;
     }
 }
 
-@media (width:1440px) {
-
-    .slider {
-        width: 100% !important;
-        min-width: 100vh !important;
-        margin-top: 1rem;
-    }
-
-    .slider-image {
-        width: 200% !important;
-        min-width: 200vh !important;
-        height: 200px !important;
-    }
-}
-
-@media (width: 1440px) {
+@media (min-width: 1440px) and (max-width: 2560px) {
     .slider {
         width: 100% !important;
         min-width: 100vh !important;
@@ -217,14 +249,15 @@ header {
 
     .slider-image {
         width: 100% !important;
-        min-width: 100vh !important;
-        height: 180px !important;
+        min-width: 100vw !important;
     }
 }
 
 /*footer */
 
 footer {
+    width: 100%;
+    min-width: 100vw;
     margin-top: 15px;
 }
 
@@ -408,7 +441,22 @@ footer {
     }
 }
 
-@media (min-width:768px) and (max-width:1024px) {
+@media (max-width: 1024px) {
+    .top-btn {
+        width: 2.5rem !important;
+        height: 2.5rem !important;
+    }
+
+    .responsive-button {
+        padding: 5px !important;
+    }
+
+    .top-btn--icon {
+        font-size: 23px !important;
+    }
+}
+
+@media (max-width: 769px) {
     .top-btn {
         width: 2.5rem !important;
         height: 2.5rem !important;
@@ -424,12 +472,10 @@ footer {
 }
 
 
-
-
-
 /* Single Card */
-
 .singlecard_container {
+    width: 100%;
+    min-width: 100vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -581,11 +627,10 @@ footer {
     background-position: right;
     background-size: cover;
     position: relative;
+    width: 100%;
+    min-width: 100vw;
     border-radius: 0.7rem;
-    margin-left: 5.5rem;
-
 }
-
 
 .long_container .txt_1 {
     font-size: 2.2rem;
@@ -606,7 +651,7 @@ footer {
 
 .long_container .Container .btn {
     position: absolute;
-    top: 195px;
+    top: 220px;
     height: 3rem;
     width: 10rem;
     border-radius: 2rem;
@@ -621,36 +666,53 @@ footer {
     cursor: pointer;
 }
 
-@media (max-width:1024px) {
+/* Media queries */
+@media (min-width: 1440px) and (max-width:1868px) {
     .long_container {
         background-image: url("https://i.ebayimg.com/00/s/NDEzWDE2MDA=/z/HOMAAOSw0nFlrleq/$_57.JPG");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
-        height: 20.62rem !important;
+        height: 22.62rem !important;
         width: 100%;
         min-width: 100vh;
-        margin-left: 1rem;
+        margin-top: 1.2rem;
+    }
+}
+
+@media (min-width: 1868px) and (max-width:2560px) {
+    .long_container {
+        height: 29.62rem !important;
+        width: 100%;
+        min-width: 100vw;
         margin-top: 1.2rem;
     }
 
     .long_container .txt_1 {
-        font-size: 1.7rem;
+        font-size: 2.2rem !important;
     }
 
     .long_container .txt_2 {
-        font-size: 1.2rem;
+        font-size: 2rem !important;
     }
 
     .long_container .Container .btn {
-        height: 2.7rem;
-        width: 8rem;
-        font-size: 1rem;
+        height: 3.7rem;
+        width: 9rem;
+        font-size: 1rem !important;
     }
 
+    .long_container .Container .btn {
+        position: absolute;
+        top: 295px;
+        height: 3.7rem;
+        width: 12rem;
+        font-size: 1.5rem !important;
+    }
 }
 
-@media (max-width:768px) {
+
+@media (min-width: 768px) and (max-width:1024px) {
     .long_container {
         background-image: url("https://i.ebayimg.com/00/s/NDEzWDE2MDA=/z/HOMAAOSw0nFlrleq/$_57.JPG");
         background-position: center;
@@ -658,27 +720,57 @@ footer {
         background-repeat: no-repeat;
         height: 15.62rem !important;
         width: 100%;
-        margin: 0 0;
+        margin: 0;
         min-width: 100vh;
         margin-top: 1.2rem;
     }
 
     .long_container .txt_1 {
-        font-size: 1.3rem;
+        font-size: 1.3rem !important;
     }
 
     .long_container .txt_2 {
-        font-size: 0.9rem;
+        font-size: 0.9rem !important;
     }
 
     .long_container .Container .btn {
         height: 2.3rem;
         width: 6.5rem;
-        font-size: 0.8rem;
+        font-size: 0.8rem !important;
         position: absolute;
-        top: 170px;
+        top: 140px;
+    }
+}
+
+@media (min-width:1024px) and (max-width:1439px) {
+    .long_container {
+        background-image: url("https://i.ebayimg.com/00/s/NDEzWDE2MDA=/z/HOMAAOSw0nFlrleq/$_57.JPG");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 19.62rem !important;
+        width: 100%;
+        margin: 0;
+        min-width: 100vh;
+        margin-top: 1.2rem;
     }
 
+
+    .long_container .Container .btn {
+        height: 2.3rem;
+        width: 7.5rem;
+        font-size: 1rem !important;
+        position: absolute;
+        top: 190px;
+    }
+
+    .long_container .txt_1 {
+        font-size: 1.7rem !important;
+    }
+
+    .long_container .txt_2 {
+        font-size: 1.2rem !important;
+    }
 }
 
 /* Card */
@@ -763,16 +855,15 @@ footer {
 /* cart_item */
 .cart_container {
     height: 220px;
-    width: 100 * 6px;
+    width: 100%;
     border: 1px solid black;
     margin-top: 1rem;
     border-radius: 10px;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
+    /* margin-left: 0.5rem;    
+     margin-right: 0.5rem; */
     margin-bottom: 1rem;
     background-color: white;
-    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
-
+    box-shadow: 0 8px 8px rgba(17, 12, 12, 0.1);
 }
 
 .horizontal-line {
@@ -785,15 +876,128 @@ footer {
 /* cart */
 .price_container {
     height: fit-content;
-    width: 400px;
+    width: 100%;
     border: 1px solid black;
     border-radius: 10px;
-    position: sticky;
-    margin-top: 1rem;
-    top: 95px;
     background-color: white;
-    margin-bottom: 1rem;
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    /* margin-bottom: 1rem; */
+    /* margin: 0 1rem 10px; */
+    top:15px
+}
+
+.promo_code {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+@media (max-width:1024px) {
+
+    .price_details {
+        font-size: 14px !important;
+    }
+
+    .price_info {
+        font-size: 14px !important;
+    }
+
+    .discount {
+        font-size: 14px !important;
+    }
+
+    .showdelivery {
+        font-size: 14px !important;
+    }
+
+    .total_price {
+        font-size: 14px !important;
+    }
+
+    .apply {
+        margin-top: 10px;
+    }
+
+    .cancel {
+        margin-top: 10px;
+    }
+
+
+    .price_container {
+        /* margin-top: 15px; */
+        width: 95%;
+        /* margin: 15px 0  auto; */
+    }
+
+    .cart_container {
+        width: 95%;
+        /* margin: 0 auto; */
+        margin-bottom: 10px;
+        height: 210px;
+    }
+
+    .cart_image {
+        height: 160px !important;
+        width: 220px !important;
+        padding-top: 9.5px !important;
+    }
+
+    .item_title {
+        font-size: 18px !important;
+    }
+
+}
+
+@media (max-width:2560px) {
+
+    .price_container {
+
+        margin-left: 15px;
+        top: 113px;
+    }
+
+
+}
+
+@media (max-width:1440px) {
+    .price_container {
+        margin-top: 15px;
+        width: 95%;
+        /* margin: 0 auto; */
+        /* width: 95% !important; */
+        /* position: sticky;
+        top:113px !important; */
+    }
+
+    .cart_container {
+        width: 95%;
+        margin-bottom: 10px;
+    }
+
+    .cancel {
+        margin-top: 10px;
+    }
+
+    .apply {
+        margin-top: 10px;
+    }
+}
+
+@media (max-width:768px) {
+    .price_container {
+        margin-top: 15px;
+        margin: 0 auto;
+        /* width: 95% !important; */
+        /* position: sticky;
+        top:113px !important; */
+    }
+
+    .cart_container {
+        margin: 0 auto;
+        margin-bottom: 10px;
+    }
+
 }
 
 .showcoupen {
@@ -813,6 +1017,7 @@ footer {
 .notshowcoupen {
     display: none;
 }
+
 
 /* success page */
 .success_container {
@@ -878,4 +1083,45 @@ footer {
     .first_name {
         width: 155px,
     }
+}
+
+/* Apply styles for the button */
+.form_btn_see_all {
+    width: 170px;
+    height: 55px;
+    font-size: 18px;
+    z-index: 1000;
+}
+
+.seeallproducts {
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+    width: 100%;
+    min-width: 100vh;
+}
+
+@media (max-width: 1024px) {
+    .form_btn_see_all {
+        width: 140px;
+        height: 40px;
+        font-size: 13px;
+    }
+}
+
+@media (max-width: 768px) {
+    .form_btn_see_all {
+        height: 38px;
+    }
+}
+
+.notification {
+    display: 'flex';
+    align-items: center;
+}
+
+.notification_image {
+    height: 50px;
+    width: 50px;
+    margin-right: 10px;
 }
