--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #c9cdd5;
+    min-height: 100vh;
     margin: 0;
     height: 100%;
     min-width: 100vh;
@@ -1435,3 +1436,11 @@ footer {
         margin: 0px;
     }
 }
+
+.ant-drawer {
+    z-index: 1050;
+}
+
+/* .ant-drawer-content-wrapper {
+    z-index: 1060;
+} */
